# huffman-compression

./: .gitignore  CMakeLists.txt  Makefile  README.md  documentacion_completa.h  huffman.cpp  huffman.h  lorenaipsum.txt  main.cpp  test.txt
src/: huffman.cpp  huffman.hpp  main.cpp
